--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "gray-matter": "^4.0.3",
     "next": "13.1.6",
+    "next-superjson-plugin": "^0.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
