--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.1.6",
     "next-superjson-plugin": "^0.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
